--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,4 +7,9 @@ vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
-**/*.ts 
+**/*.ts
+test-extension.js
+*.vsix
+node_modules/**
+package-lock.json
+.git/** 
